<b><u> v1.19, 24.01.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: More adjustments to the DPS Layout.
<font color=#FF8C00>&#9830;</font> Install: Remove the right chat texture (so the layout looks more transparent).
<font color=#FF8C00>&#9830;</font> Install: Use the Castbar now on the EmptyFrame (BenikUI required).
<font color=#FF8C00>&#9830;</font> Install: Use the JunkIcon on default (ElvUI 8.5).
<font color=#FF8C00>&#9830;</font> Install: Use MerathilisPrototypeRU Font for Player Names.
<font color=#FF8C00>&#9830;</font> Misc: Code cleanup.
<font color=#FF8C00>&#9830;</font> Tooltip: Hide the Player arrow Tooltip on the Map.
<font color=#FF8C00>&#9830;</font> Minimap: Add custom textures for the Minimap "blip"; e.g. Resource node, Tracking, ... (Credits: Derangement).

<b><u> v1.18, 19.01.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Final adjustments to the DPS Layout (I hope D:)

<b><u> v1.17a, 18.01.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Correct some Movers and Unitframes i forgot. Sorry about that. :/

<b><u> v1.17, 18.01.2016</b></u>
<font color=#FF8C00>&#9830;</font> Actionbars: Change the OOR-Check to be on Keybindtext and not on the Button. Disabled by default. (Credits: Blazeflack (Code), Darth Predator for the help and Sapzies (Idea)) - http://www.tukui.org/forums/topic.php?id=35421
<font color=#FF8C00>&#9830;</font> Misc: Cleanup the Options.
<font color=#FF8C00>&#9830;</font> Misc: Move the Skin Menu to its own Tab.
<font color=#FF8C00>&#9830;</font> Skins: Add Skin for the EncounterJournal. (ClassColor for: Encounter.Title and Encounter.Info)
<font color=#FF8C00>&#9830;</font> Skins: Add Skin for SpellBook. (Removing the Parchement) (Credits: Darth Predator)
<font color=#FF8C00>&#9830;</font> Install: Add a new Texture to the Right Chat Frame only if ElvUI_SLE is enable, because of the Texture Alpha.
<font color=#FF8C00>&#9830;</font> Install: Adjust the DPS Layout. I hope you like it. :)
