@@ -1,3 +1,6 @@
+<b><u> v1.20, xx.xx.xxxx</b></u>
+<font color=#FF8C00>&#9830;</font> Use LibElv-GameMenu-1.0 for the GameMenu Button. (Credits: Darth Predator for this amazing work ;) )
+
 <b><u> v1.19, 24.01.2016</b></u>
 <font color=#FF8C00>&#9830;</font> Install: More adjustments to the DPS Layout.
 <font color=#FF8C00>&#9830;</font> Install: Remove the right chat texture (so the layout looks more transparent).
